# awesome-pq-signatures

./: .gitignore  Cargo.toml  Makefile  README.md
crates/dilithium/: Cargo.toml  README.md
crates/dilithium/bench/: example_results.csv  example_results.json  results_schema.json  run.sh
crates/dilithium/benches/: dilithium_divan.rs
crates/dilithium/src/: lib.rs  main.rs
crates/falcon/: Cargo.toml  README.md
crates/falcon/benches/: falcon_divan.rs
crates/falcon/src/: lib.rs  main.rs
crates/fors/: Cargo.toml  README.md  run.sh
crates/hors/: Cargo.toml  README.md
crates/horst/: Cargo.toml  README.md
crates/hss/: Cargo.toml  README.md
crates/lamport_ots/: Cargo.toml  README.md
crates/lamport_ots/bench/: run.sh
crates/lamport_ots/bench/results-example/: run-20260129T105706Z-16729.csv  run-20260129T105706Z-16729.json
crates/lamport_ots/benches/: lamport_ots_divan.rs
crates/lamport_ots/src/: lib.rs  main.rs
crates/lm_ots/: Cargo.toml  README.md
crates/lm_ots/bench/: example_results.csv  example_results.json  results_schema.json  run.sh
crates/lm_ots/bench/results-example/: run-20260203T182808Z-87856.csv  run-20260203T182808Z-87856.json
crates/lm_ots/benches/: lm_ots_divan.rs
crates/lm_ots/src/: lib.rs  main.rs
crates/lms/: Cargo.toml  README.md
crates/sphincs/: Cargo.toml  README.md
crates/sphincs/bench/: example_results.csv  example_results.json  results_schema.json  run.sh
crates/sphincs/bench/results-example/: run-20260122T101531Z-22046.csv  run-20260122T101531Z-22046.json  run-20260122T101854Z-22767.csv  run-20260122T101854Z-22767.json  run-20260122T102022Z-23147.csv  run-20260122T102022Z-23147.json  run-20260204T202253Z-28130.csv  run-20260204T202253Z-28130.json
crates/sphincs/benches/: sphincs_divan.rs
crates/sphincs/src/: lib.rs  main.rs
crates/sphincs_plus/: Cargo.toml  README.md
crates/winternitz_ots/: Cargo.toml  README.md
crates/winternitz_ots/bench/: example_results.csv  example_results.json  results_schema.json  run.sh
crates/winternitz_ots/bench/results-example/: run-20260203T172457Z-57422.csv  run-20260203T172457Z-57422.json
crates/winternitz_ots/benches/: winternitz_ots_divan.rs
crates/winternitz_ots/src/: lib.rs  main.rs
crates/xmss/: Cargo.toml  README.md  build.rs
crates/xmss/bench/: example_results.csv  example_results.json  results_schema.json  run.sh
crates/xmss/bench/results-example/: run-20260122T101531Z-22046.csv  run-20260122T101531Z-22046.json  run-20260122T101854Z-22767.csv  run-20260122T101854Z-22767.json  run-20260122T102022Z-23147.csv  run-20260122T102022Z-23147.json  run-20260204T190715Z-12190.csv  run-20260204T190715Z-12190.json
crates/xmss/benches/: xmss_divan.rs
crates/xmss/src/: lib.rs  main.rs
crates/xmssmt/: Cargo.toml  README.md
crates/xmssmt/bench/: example_results.csv  example_results.json  results_schema.json  run.sh
crates/xmssmt/bench/results-example/: run-20260122T101531Z-22046.csv  run-20260122T101531Z-22046.json  run-20260122T101854Z-22767.csv  run-20260122T101854Z-22767.json  run-20260122T102022Z-23147.csv  run-20260122T102022Z-23147.json
crates/xmssmt/benches/: xmssmt_divan.rs
crates/xmssmt/src/: lib.rs  main.rs
dilithium/: README.md
falcon/: Cargo.toml
lamport_ots/: Cargo.toml
xmss/: Cargo.toml
xmssmt/: README.md
(+44 files in other folders)
