[workspace]
members = [
    "falcon",
    "dilithium",
    "lamport_ots",
    "winternitz_ots",
    "lm_ots",
    "lms",
    "hss",
    "xmss",
    "xmssmt",
    "sphincs_plus",
    "sphincs",
    "hors",
    "horst",
    "fors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
