[package]
name = "sphincs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sphincs-bench"
path = "src/main.rs"

[[bench]]
name = "sphincs_divan"
harness = false

[dependencies]

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
gravity = { git = "https://github.com/gendx/gravity-rs", rev = "c9b3bb996550341e9cab2cbae9511ea84351029b" }

[dev-dependencies]
divan = "0.1"
