[package]
name = "winternitz_ots"
version.workspace = true
edition.workspace = true

[[bin]]
name = "winternitz_ots"
path = "src/main.rs"

[[bench]]
name = "winternitz_ots_divan"
harness = false

[dependencies]
blake2-rfc = "0.2"
hex = "0.4"
winternitz_ots_lib = { package = "winternitz-ots", version = "0.3.0" }

[dev-dependencies]
divan = "0.1"
